example-9/3-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: example-9
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: myapp
